Tables fixed, visible too

--- a/css/mainStyles.css
+++ b/css/mainStyles.css
@@ -69,7 +69,7 @@
 	position: static;
 }
 
-#Tab50 {
+/*#Tab50 {
 	display: none;
 }
 
@@ -79,7 +79,7 @@
 
 #Tab250 {
 	display: none;
-}
+} */
 
 .Banner {
 	position: static;
